delete user and list of user swag
