# internal/http-server/handlers/user/user_list/user_list.go
@@ -6,7 +6,7 @@ import (
 
 	"log/slog"
 
-	resp "avito_back_intership/internal/lib/api/response"
+	"avito_back_intership/internal/lib/api/response"
 
 	"github.com/go-chi/chi/v5/middleware"
 	"github.com/go-chi/render"
@@ -14,7 +14,7 @@ import (
 
 type Response struct {
 	UserList []string
-	resp.Response
+	response.Response
 }
 
 //go:generate mockery --name=URLSaver
@@ -22,6 +22,15 @@ type UserListGetter interface {
 	UserList() (*sql.Rows, error)
 }
 
+// @Summary			Получения списка всех пользователей
+// @Tags			User
+// @Description		Получения списка всех пользователей
+// @ID				user-list
+// @Accept			json
+// @Produce			json
+// @Success			200		{object}	Response
+// @Failure			default	{object}	Response
+// @Router			/user [get]
 func New(log *slog.Logger, userListGetter UserListGetter) http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
 		const op = "handlers.user.list_getter.New"
@@ -33,7 +42,7 @@ func New(log *slog.Logger, userListGetter UserListGetter) http.HandlerFunc {
 		rows, err := userListGetter.UserList()
 		if err != nil {
 			log.Error("failed to get list of users")
-			render.JSON(w, r, resp.Error("failed to get list of users"))
+			render.JSON(w, r, response.Error("failed to get list of users"))
 			return
 		}
 
@@ -46,13 +55,13 @@ func New(log *slog.Logger, userListGetter UserListGetter) http.HandlerFunc {
 
 		render.JSON(w, r, Response{
 			UserList: userList,
-			Response: resp.OK(),
+			Response: response.OK(),
 		})
 
 		// err = csv.CreateCSV(log, "users.csv", rows)
 		// if err != nil {
 		// 	log.Error("failed to create csv")
-		// 	render.JSON(w, r, resp.Error("failed to create csv"))
+		// 	render.JSON(w, r, response.Error("failed to create csv"))
 		// 	return
 		// }
 
